taryn fix spacing on card and right side bar

--- a/components/mainFoodPage/styles/calculatorSideBar.module.css
+++ b/components/mainFoodPage/styles/calculatorSideBar.module.css
@@ -10,7 +10,7 @@
   margin-top: 10px;
   top: 0;
   left: 0;
-  width: 300px;
+  width: 350px;
   height: calc(100vh - 165px);
   overflow: hidden;
   text-align: center;
