--- a/components/mainFoodPage/styles/foodCards.module.css
+++ b/components/mainFoodPage/styles/foodCards.module.css
@@ -1,7 +1,7 @@
 /*styles for food cards*/
 .foodcard {
-  width: 200px;
-  height: 200px;
+  width: 170px;
+  height: 170px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,8 +63,8 @@
 
 .foodcardName {
   position: absolute;
-  top: 143px; 
-  left: 5px; 
+  top: 112px; 
+  left: 3px; 
   font-size: 20px; 
   font-weight: bold;
   color: black; 
@@ -87,10 +87,10 @@
   display: flex;
   flex-wrap: wrap;
   padding: 50px;
-  padding-top: 35px;
+  padding-top: 10px;
   gap: 20px;
-  margin-top: 10px;
-  justify-content: flex-start;
+  margin-top: 0px;
+  justify-content: center;
   align-items: flex-start;
   overflow-y: auto;
   font-size: var(--font-size-19xl);
@@ -105,8 +105,8 @@
 .addFoodButton,
 .removeFoodButton {
   position: absolute;
-  bottom: 38px;
-  left: 41%;
+  bottom: 37px;
+  left: 53px;
   margin-right: -30px;
   transform: translateX(-50%);
   height: 30px;
