--- a/components/mainFoodPage/styles/rightSideBar.module.css
+++ b/components/mainFoodPage/styles/rightSideBar.module.css
@@ -5,7 +5,7 @@
   margin-top: 10px;
   top: 0;
   left: 0;
-  width: 300px;
+  width: 290px;
   height: calc(100vh - 165px);
   overflow: hidden;
   text-align: center;
@@ -16,6 +16,9 @@
   padding-bottom: 20px;
   padding-top: 10px;
   box-shadow: 2px 2px 6px gray;
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .headers {
@@ -33,7 +36,7 @@
 }
 
 .myPlateIcon {
-  width: 40%;
+  width: 60%;
   margin-top: 5%;
   height: auto;
   object-fit: cover;
@@ -41,24 +44,24 @@
 
 .waterIcon {
   margin-top: 4%;
-  width: 12%;
+  width: 18%;
   height: auto;
   object-fit: cover;
 }
 
 .carbonIcon {
   margin-top: 4%;
-  width: 30%;
+  width: 45%;
   height: auto;
   object-fit: cover;
 }
 
 .starsIcon {
-  width: 50%;
+  width: 65%;
   height: auto;
   object-fit: cover;
-  margin-top: -9%;
-  margin-bottom: -20%;
+  margin-top: -18%;
+  margin-bottom: -25%;
 }
 
 .titleName {
@@ -71,4 +74,35 @@
   height: 10px;
   width: 10px;
   margin-left: 10px;
+}
+
+.tooltipContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltipContainer .tooltipText {
+  visibility: hidden;
+  width: 160px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  text-align: center;
+  padding: 8px;
+  border-radius: 5px;
+
+  /* Positioning */
+  position: absolute;
+  z-index: 10;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-80%);
+
+  /* Animation */
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.tooltipContainer:hover .tooltipText {
+  visibility: visible;
+  opacity: 1;
 }
