--- a/components/mainFoodPage/styles/search.module.css
+++ b/components/mainFoodPage/styles/search.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 10px;
   margin-left: auto;
-  margin-right: 11%;
+  margin-right: 8%;
 }
 .searchInput {
   padding: 12px;
