--- a/pages/styles/mainFoodPage.module.css
+++ b/pages/styles/mainFoodPage.module.css
@@ -13,6 +13,19 @@
   font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
+.foodCardsContainer{
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center; 
+  align-items: flex-start;
+  overflow-y: auto; 
+  max-height: calc(100vh - 200px); 
+  width: calc(100vw - 550px);
+  /* border: 6px solid black; 
+  background-color: red;
+  z-index: 100; */
+}
+
 .rightOfSidebar {
   top: 0;
   height: calc(100vh - 123px);
